シーケンス図のソート機能追加(開発中)

--- a/WebContent/css/fricore.css
+++ b/WebContent/css/fricore.css
@@ -931,6 +931,19 @@ input[type="range"] {
 
 
 
-
-
+#sequence-role-filter{
+	max-height: 10em;
+	overflow-y: scroll;
+	list-style-type: none;
+}
+#sequence-role-filter>li{
+	cursor: hand;
+	clear: both;
+}
+#sequence-role-filter>li:hover{
+	background-color: highlight;
+}
+#sequence-role-filter>li>button{
+	
+}
 
